--- a/src/views/empresasPages/registrarEmpresa.ejs
+++ b/src/views/empresasPages/registrarEmpresa.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Registro</title>
+    <title>Tapp</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="/css/style.default.css" id="theme-stylesheet">
     <!-- Custom stylesheet - for your changes-->
     <link rel="stylesheet" href="/css/custom.css">
+    <link rel="stylesheet" href="/css/estilo.css">
     <!-- Favicon-->
     <link rel="shortcut icon" href="/img/favicon.png?3">
     <!-- Tweaks for older IEs--><!--[if lt IE 9]>
@@ -28,11 +29,11 @@
   <body>
     <!-- navbar-->
     <header class="header">
-      <nav class="navbar navbar-expand-lg px-4 py-2 bg-white shadow"><a href="#" class="sidebar-toggler text-gray-500 mr-4 mr-lg-5 lead"><i class="fas fa-align-left"></i></a><a href="index.html" class="navbar-brand font-weight-bold text-uppercase text-base">Formulario de Registro Empresas</a>
+      <nav class="navbar navbar-expand-lg px-4 py-2 bg-white shadow"><a href="#" class="sidebar-toggler text-gray-500 mr-4 mr-lg-5 lead"><i class="fas fa-align-left"></i></a><a href="index.html" class="navbar-brand font-weight-bold text-uppercase text-base">Tapp</a>
         <ul class="ml-auto d-flex align-items-center list-unstyled mb-0">
           
         
-          <li class="nav-item dropdown ml-auto"><a id="userInfo" href="http://example.com" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle"><img src="img/avatar-6.jpg" alt="Jason Doe" style="max-width: 2.5rem;" class="img-fluid rounded-circle shadow"></a>
+          <li class="nav-item dropdown ml-auto"><a id="userInfo" href="http://example.com" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle"><img src="/img/avatar-6.jpg" alt="Jason Doe" style="max-width: 2.5rem;" class="img-fluid rounded-circle shadow"></a>
             <div aria-labelledby="userInfo" class="dropdown-menu"><a href="#" class="dropdown-item"><strong class="d-block text-uppercase headings-font-family">Mark Stephen</strong><small>Web Developer</small></a>
               <div class="dropdown-divider"></div><a href="#" class="dropdown-item">Settings</a><a href="#" class="dropdown-item">Activity log       </a>
               <div class="dropdown-divider"></div><a href="login.html" class="dropdown-item">Logout</a>
@@ -65,13 +66,20 @@
       </div>
       <div class="page-holder w-100 d-flex flex-wrap">
         <div class="container-fluid px-xl-5">
+          <nav class="mt-4" aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item active">Registrarse</li>
+                <li class="breadcrumb-item active" aria-current="page">Empresas</li>
+            </ol>
+        </nav>
+
           <section class="py-5">
             <div class="row">
               <!-- Form Elements -->
               <div class="col-lg-12 mb-5">
                 <div class="card">
                   <div class="card-header">
-                    <h3 class="h6 text-uppercase mb-0">Ingrese sus Datos</h3>
+                    <h3 class="h6 text-uppercase mb-0">Formulario de registro de empresa</h3>
                   </div>
                   <div class="card-body">
                      
@@ -91,7 +99,7 @@
                            
                         <label class="col-md-3 form-control-label">Ubicación</label>
                         <div class="col-md-9">
-                          <textarea class="form-control" id="ubicacion" rows="3" name="ubicacion"></textarea>
+                          <textarea class="form-control scroll" id="ubicacion" rows="3" name="ubicacion"></textarea>
                         </div>
                       </div>
                       <div class="line"></div>
@@ -100,7 +108,7 @@
                            
                         <label class="col-md-3 form-control-label">Descripcion Empresa</label>
                         <div class="col-md-9">
-                          <textarea class="form-control" id="descripcion" rows="3" name="descripcion"></textarea>
+                          <textarea class="form-control scroll" id="descripcion" rows="3" name="descripcion"></textarea>
                         </div>
                       </div>
                       <div class="line"></div>
