--- a/src/views/homePages/index.ejs
+++ b/src/views/homePages/index.ejs
@@ -236,7 +236,7 @@
             </div>
           </div>
         </div>
-        <div class="row">
+        <div class="row mb-5">
           <div class="col-lg-12 mt-5">
             <div class="card mb-5 mb-lg-0">
               <div class="card-header">
@@ -387,11 +387,10 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-6 text-center text-md-left text-primary">
-              <p class="mb-2 mb-md-0">Your company &copy; 2018-2020</p>
+              <p class="mb-2 mb-md-0">Tapp</p>
             </div>
             <div class="col-md-6 text-center text-md-right text-gray-400">
-              <p class="mb-0">Design by <a href="https://bootstrapious.com/admin-templates"
-                  class="external text-gray-400">Bootstrapious</a></p>
+              <p class="mb-0">Desarrollo de Software IX</p>
               <!-- Please do not remove the backlink to us unless you support further theme's development at https://bootstrapious.com/donate. It is part of the license conditions. Thank you for understanding :)-->
             </div>
           </div>
@@ -406,7 +405,7 @@
   <script src="/vendor/jquery.cookie/jquery.cookie.js"> </script>
   <script src="/vendor/chart.js/Chart.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
-  <script src="/js/charts-home.js"></script>
+  <!-- <script src="/js/charts-home.js"></script> -->
   <script src="/js/front.js"></script>
 </body>
 
