--- a/src/views/homePages/login.ejs
+++ b/src/views/homePages/login.ejs
@@ -47,8 +47,8 @@
               <button id="iniSesion" type="submit" class="btn btn-primary shadow px-5">Iniciar sesión </button>
             </form>
             <div class="mt-5 text-center align-items-center align-middle">
-           		<p class="text-muted">Aún no tiene cuenta?</p>
-           		<a class="text-primary" href="www.google.com">Registrese aquí.</a>
+           		<p class="text-muted">Aún no tiene cuenta?
+           		<a class="text-primary" href="www.google.com">Registrese aquí.</a> </p>
            	</div>         
           </div>
         </div>
