--- a/src/views/profesionalesPages/registrarProfesional.ejs
+++ b/src/views/profesionalesPages/registrarProfesional.ejs
@@ -126,11 +126,11 @@
                         <div class="col-md-9">
                           <div class="custom-control custom-radio custom-control-inline">
                             <input id="sexoF" type="radio" name="sexopro" class="custom-control-input" checked="true">
-                            <label for="customRadioInline1" class="custom-control-label">Femenino</label>
+                            <label for="sexoF" class="custom-control-label">Femenino</label>
                           </div>
                           <div class="custom-control custom-radio custom-control-inline">
                             <input id="sexoM" type="radio" name="sexopro" class="custom-control-input">
-                            <label for="customRadioInline2" class="custom-control-label">Masculino</label>
+                            <label for="sexoM" class="custom-control-label">Masculino</label>
                           </div>
                         </div>
                       </div>
