--- a/src/views/empresasPages/empresaVacante.ejs
+++ b/src/views/empresasPages/empresaVacante.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Bubbly - Boootstrap 4 Admin template by Bootstrapious.com</title>
+    <title>Tapp</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -280,11 +280,10 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-left text-primary">
-                            <p class="mb-2 mb-md-0">Your company &copy; 2018-2020</p>
+                            <p class="mb-2 mb-md-0">Tapp</p>
                         </div>
                         <div class="col-md-6 text-center text-md-right text-gray-400">
-                            <p class="mb-0">Design by <a href="https://bootstrapious.com/admin-templates"
-                                    class="external text-gray-400">Bootstrapious</a></p>
+                            <p class="mb-0">Proyecto de Desarollo IX</p>
                             <!-- Please do not remove the backlink to us unless you support further theme's development at https://bootstrapious.com/donate. It is part of the license conditions. Thank you for understanding :)-->
                         </div>
                     </div>
@@ -297,9 +296,9 @@
     <script src="/vendor/popper.js/umd/popper.min.js"> </script>
     <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="/vendor/jquery.cookie/jquery.cookie.js"> </script>
-    <script src="/vendor/chart.js/Chart.min.js"></script>
+    <!-- <script src="/vendor/chart.js/Chart.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
-    <script src="/js/charts-home.js"></script>
+   <!-- <script src="/js/charts-home.js"></script>  -->
     <script src="/js/front.js"></script>
 </body>
 
