--- a/src/views/partials/sideMenu.ejs
+++ b/src/views/partials/sideMenu.ejs
@@ -2,7 +2,7 @@
 <div id="sidebar" class="sidebar py-3">
     <div class="text-gray-400 text-uppercase px-3 px-lg-4 py-4 font-weight-bold small headings-font-family">MAIN</div>
     <ul class="sidebar-menu list-unstyled">
-        <li class="sidebar-list-item"><a href="/" class="sidebar-link text-muted active"><i
+        <li class="sidebar-list-item"><a href="/" class="sidebar-link text-muted "><i
                     class="o-home-1 mr-3 text-gray"></i><span>Inicio</span></a></li>
         <li class="sidebar-list-item"><a href="/verVacantes" class="sidebar-link text-muted"><i
                     class="o-sales-up-1 mr-3 text-gray"></i><span>Vacantes</span></a></li>
