--- a/src/views/partials/sideMenu.ejs
+++ b/src/views/partials/sideMenu.ejs
@@ -1,5 +1,55 @@
 
-<div id="sidebar" class="sidebar py-3">
+
+
+    <%
+    if(page.sideMenu !== undefined){
+    %>
+    <div id="sidebar" class="sidebar py-3">    
+     <%
+     let sideMenu = page.sideMenu;   
+     sideMenu.forEach((item) =>{
+        switch(item.type){
+            case "title":%>
+            <div class="text-gray-400 text-uppercase px-3 px-lg-4 py-4 font-weight-bold small headings-font-family"><%=item.text%></div>
+           <% break;
+           case "list":
+           %>
+            <ul class="sidebar-menu list-unstyled">
+           <% 
+           item.list.forEach((i) =>{
+               switch(i.type){
+                   case "list-item": %>
+                   <li class="sidebar-list-item"><a href="<%= i.target %>" class="sidebar-link text-muted "><span><%= i.text %></span></a></li>
+                   <%break;
+                   case "list-collapse": %>
+                    <li class="sidebar-list-item"><a href="#" data-toggle="collapse" data-target="#<%= i.targetId %>" aria-expanded="false"
+                            aria-controls="<%= i.targetId %>" class="sidebar-link text-muted"><span><%= i.text %></span></a>
+                        <div id="<%= i.targetId %>" class="collapse">
+                            <ul class="sidebar-menu list-unstyled border-left border-primary border-thick">
+                        <%
+                            i.list.forEach((e) =>{%>
+                                <li class="sidebar-list-item"><a href="<%= e.target %>" class="sidebar-link text-muted pl-lg-5"><%= e.text %></a></li>
+                            <%})
+                        %>
+                            </ul>
+                        </div>
+                    </li>
+                   <% break;
+               }
+           })
+           %>
+            </ul>
+           <% break;
+        }
+     });
+    %>
+    </div>
+    <%
+    }
+    %>
+
+<!-- Original -->
+<!-- <div id="sidebar" class="sidebar py-3">
     <div class="text-gray-400 text-uppercase px-3 px-lg-4 py-4 font-weight-bold small headings-font-family">MAIN</div>
     <ul class="sidebar-menu list-unstyled">
         <li class="sidebar-list-item"><a href="/" class="sidebar-link text-muted "><i
@@ -13,9 +63,12 @@
                     class="o-wireframe-1 mr-3 text-gray"></i><span>Registro</span></a>
             <div id="pages" class="collapse">
                 <ul class="sidebar-menu list-unstyled border-left border-primary border-thick">
-                    <li class="sidebar-list-item"><a href="/registroEmpresa" class="sidebar-link text-muted pl-lg-5">Empresa</a></li>
-                    <li class="sidebar-list-item"><a href="/registroProfesional" class="sidebar-link text-muted pl-lg-5">Profesional</a></li>
-                    <li class="sidebar-list-item"><a href="empresa/registrarVacante" class="sidebar-link text-muted pl-lg-5">Vacante</a></li>
+                    <li class="sidebar-list-item"><a href="/registroEmpresa"
+                            class="sidebar-link text-muted pl-lg-5">Empresa</a></li>
+                    <li class="sidebar-list-item"><a href="/registroProfesional"
+                            class="sidebar-link text-muted pl-lg-5">Profesional</a></li>
+                    <li class="sidebar-list-item"><a href="empresa/registrarVacante"
+                            class="sidebar-link text-muted pl-lg-5">Vacante</a></li>
                 </ul>
             </div>
         </li>
@@ -28,4 +81,4 @@
         <li class="sidebar-list-item"><a href="/admin" class="sidebar-link text-muted"><i
                     class="o-database-1 mr-3 text-gray"></i><span>Dashboard</span></a></li>
     </ul>
-</div>
+</div> -->
