--- a/src/views/homePages/index.ejs
+++ b/src/views/homePages/index.ejs
@@ -27,6 +27,19 @@
   <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+          <!-- JavaScript files-->
+          <script src="/vendor/jquery/jquery.min.js"></script>
+          <script src="/vendor/popper.js/umd/popper.min.js"> </script>
+          <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+          <script src="/vendor/jquery.cookie/jquery.cookie.js"> </script>
+          <script src="/vendor/chart.js/Chart.min.js"></script>
+          <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+          <!-- <script src="/js/charts-home.js"></script> -->
+          <!-- <script src="/js/front.js"></script> -->
+        <script src="//cdn.plugdo.com/js/plugdo-dependency.min.js"></script>
+        <script src="//cdn.plugdo.com/release/2.6/plugdoeui.min.js"></script>
+        <script src="\js\home\index.js"></script>
+
 </head>
 
 <body>
@@ -34,17 +47,8 @@
   <%- include('../partials/header') %>
   <div class="d-flex align-items-stretch">
     <%- include('../partials/sideMenu') %>
-    <%- include(page.route) %>
+    <div id="container"></div>
   </div>
-  <!-- JavaScript files-->
-  <script src="/vendor/jquery/jquery.min.js"></script>
-  <script src="/vendor/popper.js/umd/popper.min.js"> </script>
-  <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
-  <script src="/vendor/jquery.cookie/jquery.cookie.js"> </script>
-  <script src="/vendor/chart.js/Chart.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
-  <!-- <script src="/js/charts-home.js"></script> -->
-  <script src="/js/front.js"></script>
 </body>
 
 </html>
