--- a/src/views/homePages/index.ejs
+++ b/src/views/homePages/index.ejs
@@ -37,9 +37,8 @@
           <!-- <script src="/js/charts-home.js"></script> -->
           <!-- <script src="/js/front.js"></script> -->
         <script src="//cdn.plugdo.com/js/plugdo-dependency.min.js"></script>
-        <script src="//cdn.plugdo.com/release/2.6/plugdoeui.min.js"></script>
-        <script src="\js\home\index.js"></script>
-
+        <script src="//cdn.plugdo.com/release/2.7/plugdoeui.min.js"></script>
+        <script src="\js\homePages\index.js"></script>
 </head>
 
 <body>
