--- a/src/views/homePages/verProfesionales.ejs
+++ b/src/views/homePages/verProfesionales.ejs
@@ -28,7 +28,7 @@
                     <button type="button" data-dismiss="modal" aria-label="Close" class="close"><span
                         aria-hidden="true">×</span></button>
                   </div>
-                  <form class="range-field" action="/filtrarProfesionales" method="POST">
+                  <form class="range-field" action="#profesionales" method="GET">
                     <div class="modal-body">
                       <div class="form-group">
                         <label class="col-lg-4">Areas laborales:</label>
@@ -255,7 +255,6 @@
       </div>
     </div>
   </footer>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script>
     var buscar = document.querySelector('#buscar');
     var data = '<%-JSON.stringify(page.profesionales)%>';
@@ -279,18 +278,5 @@
       }
     }
     buscar.addEventListener('keyup', filtrar);
-  </script>
-  <script type="text/javascript">
-    console.log(objProfesionales);
-    $(document).on("click", ".message", function () {
-      document.getElementById("#nombre").innerHTML = objProfesionales[$(this).data('id')].nombre_profesional + " " + objProfesionales[$(this).data('id')].apellido_profesional;
-      document.getElementById("#edad").innerHTML = objProfesionales[$(this).data('id')].edad;
-      document.getElementById("#sexo").innerHTML = objProfesionales[$(this).data('id')].sexo;
-      document.getElementById("#direccion").innerHTML = objProfesionales[$(this).data('id')].direccion;
-      document.getElementById("#email").innerHTML = objProfesionales[$(this).data('id')].email;
-      document.getElementById("#telefono").innerHTML = objProfesionales[$(this).data('id')].telefono_profesional;
-      document.getElementById("#nivel").innerHTML = objProfesionales[$(this).data('id')].nivel_academico;
-      document.getElementById("#experiencia").innerHTML = objProfesionales[$(this).data('id')].experiencia;   
-    });
   </script>
 </div>
