--- a/src/views/empresasPages/index.ejs
+++ b/src/views/empresasPages/index.ejs
@@ -45,6 +45,7 @@
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
     <!-- <script src="/js/charts-home.js"></script> -->
     <script src="/js/front.js"></script>
+    <script src="/js/RegistrarVacante.js"></script>
 </body>
 
 </html>
