--- a/src/views/empresasPages/index.ejs
+++ b/src/views/empresasPages/index.ejs
@@ -37,6 +37,7 @@
         <%- include(page.route) %>
     </div>
     <!-- JavaScript files-->
+    <script src="https://cdn.jsdelivr.net/gh/NetoCh/libraries@v1.1.3/SelectService-Example/select-services.min.js"></script>
     <script src="/vendor/jquery/jquery.min.js"></script>
     <script src="/vendor/popper.js/umd/popper.min.js"> </script>
     <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
