--- a/src/views/partials/sideMenu.ejs
+++ b/src/views/partials/sideMenu.ejs
@@ -2,7 +2,7 @@
 <%
 if(page.sideMenu !== undefined){
 %>
-<div id="sidebar" class="sidebar py-3">    
+<div id="sidebar" class="sidebar py-3" style="min-height: 100vh;">    
     <%
     let sideMenu = page.sideMenu;   
     sideMenu.forEach((item) =>{
