--- a/src/public/css/style.default.css
+++ b/src/public/css/style.default.css
@@ -1260,7 +1260,7 @@ button {
 *
 */
 .sidebar {
-  width: 16rem;
+  /* width: 16rem; */
   background: #fff;
   -webkit-box-shadow: 0 0.125rem 0.8rem rgba(0, 0, 0, 0.1);
   box-shadow: 0 0.125rem 0.8rem rgba(0, 0, 0, 0.1);
