--- a/src/views/homePages/index.ejs
+++ b/src/views/homePages/index.ejs
@@ -23,31 +23,24 @@
   <link rel="stylesheet" href="/css/custom.css">
   <!-- Favicon-->
   <link rel="shortcut icon" href="/img/favicon.png?3">
-  <!-- Tweaks for older IEs-->
-  <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
-          <!-- JavaScript files-->
-          <script src="/vendor/jquery/jquery.min.js"></script>
-          <script src="/vendor/popper.js/umd/popper.min.js"> </script>
-          <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
-          <script src="/vendor/jquery.cookie/jquery.cookie.js"> </script>
-          <script src="/vendor/chart.js/Chart.min.js"></script>
-          <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
-          <!-- <script src="/js/charts-home.js"></script> -->
-          <!-- <script src="/js/front.js"></script> -->
-        <script src="//cdn.plugdo.com/js/plugdo-dependency.min.js"></script>
-        <script src="//cdn.plugdo.com/release/2.7/plugdoeui.min.js"></script>
-        <script src="\js\homePages\index.js"></script>
+  <!-- SCRIPTS -->
+  <script src="/vendor/jquery/jquery.min.js"></script>
+  <script src="/vendor/popper.js/umd/popper.min.js"> </script>
+  <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+  <script src="/js/front.js"></script>
+  <script src="//cdn.plugdo.com/release/2.7/plugdoeui.min.js"></script>
+  <script src="\js\homePages\index.js"></script>
 </head>
-
 <body>
   <!-- navbar-->
   <%- include('../partials/header') %>
   <div class="d-flex align-items-stretch">
     <%- include('../partials/sideMenu') %>
-    <div id="container"></div>
+    <div id="container" class="container-fluid"></div>
   </div>
+  <script src="https://cdn.jsdelivr.net/gh/NetoCh/libraries@v1.1.3/SelectService-Example/select-services.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+  <script src="/vendor/jquery.cookie/jquery.cookie.js"> </script>
   <script src="/js/homePages/profesionales.js"></script>
   <script src="/js/homePages/ver-vacante.js"></script>
   <script src="/js/homePages/ver-profesionales.js"></script>
