--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <header class="header">
-    <nav class="navbar navbar-expand-lg px-4 py-2 bg-white shadow"><a href="#"
+    <nav class="navbar navbar-expand-lg px-4 py-2 bg-white shadow"><a
             class="sidebar-toggler text-gray-500 mr-4 mr-lg-5 lead"><i class="fas fa-align-left"></i></a><a
             href="/" class="navbar-brand font-weight-bold text-uppercase text-base">Tapp</a>
         <ul class="ml-auto d-flex align-items-center list-unstyled mb-0">
