Nuevos arreglos, filtro y busqueda funcionando

--- a/src/views/homePages/index.ejs
+++ b/src/views/homePages/index.ejs
@@ -49,7 +49,6 @@
     <div id="container"></div>
   </div>
   <script src="/js/homePages/profesionales.js"></script>
-  <script src="/js/homePages/ver-vacante.js"></script>
-  <script src="/js/homePages/ver-profesionales.js"></script>
+  <script src="/js/homePages/vacantes.js"></script>
 </body>
 </html>
