--- a/src/views/homePages/verProfesionales.ejs
+++ b/src/views/homePages/verProfesionales.ejs
@@ -110,20 +110,20 @@
       <%} else {%>
       <% var i = -1; for (var data of page.profesionales) { i++ %>
       <!--Profesionales-->
-      <div class="col-lg-12" id="<%= i %>"><a href="#" class="message card px-5 py-3 mb-4 bg-hover-gradient-primary no-anchor-style"
-          data-toggle="modal" data-id="<%= i %>" data-target="#modal">
+      <div class="col-lg-12" id="<%= data.id_profesional %>"><a href="#" class="messageProfesional card px-5 py-3 mb-4 bg-hover-gradient-primary no-anchor-style"
+          data-toggle="modal" data-id="<%= data.id_profesional %>" data-target="#modal">
           <div class="row">
             <div class="col-lg-3 d-flex align-items-center flex-column flex-lg-row text-center text-md-left">
               <img src="/img/avatar-4.jpg" alt="..." style="max-width: 3rem" class="rounded-circle mx-3 my-2 my-lg-0">
               <h6 class="mb-0"><%- data.nombre_profesional + " " + data.apellido_profesional  %></h6>
             </div>
-            <div class="col-lg-3 d-flex align-items-center flex-column flex-lg-row text-center text-md-left">
+            <div class="col-lg-4 d-flex align-items-center flex-column flex-lg-row text-center text-md-left">
               <div
                 class="bg-gray-100 roundy px-4 py-1 mr-0 mr-lg-1 mt-2 mt-lg-0 text-dark exclode col-lg-12 text-center">
-                <%- data.nombre_servicio %>
+                <%- data.nombre_area %>
               </div>
             </div>
-            <div class="col-lg-5 d-flex align-items-center flex-column flex-lg-row text-center text-md-left">
+            <div class="col-lg-4 d-flex align-items-center flex-column flex-lg-row text-center text-md-left">
               <p class="mb-0 mt-3 mt-lg-0"><%- data.descripcion_profesional %></p>
             </div>
             <% if (data.destacado == 1) { %>
