--- a/src/views/profesionalesPages/index.ejs
+++ b/src/views/profesionalesPages/index.ejs
@@ -49,8 +49,7 @@
         <div id="container"></div>
     </div>
     <script src="/js/homePages/profesionales.js"></script>
-    <script src="/js/homePages/ver-vacante.js"></script>
-    <script src="/js/homePages/ver-profesionales.js"></script>
+    <script src="/js/homePages/vacantes.js"></script>
 </body>
 
 </html>
