--- a/src/public/css/estilo.css
+++ b/src/public/css/estilo.css
@@ -1,3 +1,20 @@
 .scroll::-webkit-scrollbar {
    display: none;
  }
+
+ .button {
+  display: inline-block;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  border: none;
+  box-shadow: 0 3px #999;
+}
+
+.button:hover {background-color: #273044}
+
+.button:active {
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
