--- a/src/views/empresasPages/index.ejs
+++ b/src/views/empresasPages/index.ejs
@@ -15,18 +15,26 @@
         integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <!-- Google fonts - Popppins for copy-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,800">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
     <!-- orion icons-->
     <link rel="stylesheet" href="/css/orionicons.css">
     <!-- theme stylesheet-->
     <link rel="stylesheet" href="/css/style.default.css" id="theme-stylesheet">
     <!-- Custom stylesheet - for your changes-->
     <link rel="stylesheet" href="/css/custom.css">
+    <link rel="stylesheet" href="/css/estilo.css">
     <!-- Favicon-->
     <link rel="shortcut icon" href="/img/favicon.png?3">
     <!-- Tweaks for older IEs-->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+    <!-- JavaScript files-->
+    <script src="/vendor/jquery/jquery.min.js"></script>
+    <script src="/vendor/popper.js/umd/popper.min.js"> </script>
+    <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="//cdn.plugdo.com/release/2.7/plugdoeui.min.js"></script>
+    <script src="\js\empresasPages\index.js"></script>
 </head>
 
 <body>
@@ -34,7 +42,7 @@
     <%- include('../partials/header') %>
     <div class="d-flex align-items-stretch">
         <%- include('../partials/sideMenu') %>
-        <%- include(page.route) %>
+        <div id="container"></div>
     </div>
     <!-- JavaScript files-->
     <script src="/vendor/jquery/jquery.min.js"></script>
@@ -46,6 +54,8 @@
     <!-- <script src="/js/charts-home.js"></script> -->
     <script src="/js/front.js"></script>
     <script src="/js/RegistrarVacante.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/NetoCh/libraries@v1.1.3/SelectService-Example/select-services.min.js"> </script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"> </script>
 </body>
 
 </html>
