--- a/src/views/empresasPages/registrarVacante.ejs
+++ b/src/views/empresasPages/registrarVacante.ejs
@@ -9,7 +9,7 @@
               <h3 class="h6 text-uppercase mb-0">Registro de vacantes</h3>
             </div>
             <div class="card-body">
-              <form class="form-horizontal">
+              <form class="form-horizontal" id="formVacante">
 
                 <div class="form-group row">
                   <label class="col-md-3 form-control-label">Nombre de vacante</label>
@@ -23,12 +23,7 @@
                 <div class="form-group row">
                   <label class="col-md-3 form-control-label">Área laboral</label>
                   <div class="col-md-9">
-                    <select name="areaLaboral" id ="areaLaboral" class="form-control" required="true">
-                      <option selected value="-1">Seleccione un área</option>
-                        <% for (var area of page.areas) { %>
-                           <option value=<%= area.id %>><%= area.Nombre %></option>
-                        <% } %>
-                    </select>
+                    <select name="areaLaboral" id ="areaLaboral" class="form-control" required="true"> </select>
                     <small class="form-text text-muted ml-3">Seleccione el área laboral de su vacante.</small>
                   </div>
                 </div>
@@ -96,8 +91,8 @@
                 <div class="line"></div>
                 <div class="form-group row">
                   <div class="col-md-9 ml-auto">
-                    <button type="reset" class="btn btn-secondary">Limpiar</button>
-                    <button type="submit" class="btn btn-primary">Enviar Datos</button>
+                    <button type="reset" class="btn btn-secondary button">Limpiar</button>
+                    <button type="submit" class="btn btn-primary button" id="btnRegistrar">Registrar Vacante</button>
                   </div>
                 </div>
               </form>
