Pagina de Inicio

--- a/src/views/homePages/index.ejs
+++ b/src/views/homePages/index.ejs
@@ -39,6 +39,13 @@
   <script src="//cdn.plugdo.com/js/plugdo-dependency.min.js"></script>
   <script src="//cdn.plugdo.com/release/2.6/plugdoeui.min.js"></script>
   <script src="\js\homePages\index.js"></script>
+  <link rel="stylesheet" href="/css/home/hero.css">
+  <link rel="stylesheet" href="/css/home/card.css">
+  <link rel="stylesheet" href="/css/home/card-empresa.css">
+  <link rel="stylesheet" href="/css/home/divider.css">
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+
 
 </head>
 
