Push al Branch por Chan

--- a/src/views/homePages/index.ejs
+++ b/src/views/homePages/index.ejs
@@ -31,6 +31,7 @@
   <script src="//cdn.plugdo.com/release/2.7/plugdoeui.min.js"></script>
   <script src="\js\homePages\index.js"></script>
 </head>
+
 <body>
   <!-- navbar-->
   <%- include('../partials/header') %>
@@ -38,10 +39,12 @@
     <%- include('../partials/sideMenu') %>
     <div id="container" class="container-fluid"></div>
   </div>
-  <script src="https://cdn.jsdelivr.net/gh/NetoCh/libraries@v1.1.3/SelectService-Example/select-services.min.js"></script>
+  <script
+    src="https://cdn.jsdelivr.net/gh/NetoCh/libraries@v1.1.3/SelectService-Example/select-services.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
   <script src="/vendor/jquery.cookie/jquery.cookie.js"> </script>
   <script src="/js/homePages/profesionales.js"></script>
   <script src="/js/homePages/vacantes.js"></script>
 </body>
+
 </html>
